hphp/test/slow/string_length_overflow/implode.php.expectf

Fatal error: String length exceeded 2^31-2: 15008494201 in %s/test/slow/string_length_overflow/implode.php on line 5
